--- a/package.json
+++ b/package.json
@@ -1,20 +1,130 @@
 {
-  "name": "fm",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-user-control-manager",
+  "version": "1.0.0",
+  "description": "Generate Forms based on a JSON Spec",
+  "main": "dist/index.js",
+  "contributors": [
+    {
+      "name": "Suresh Pillay",
+      "email": "me@sureshpillay.com"
+    },
+    {
+      "name": "Bhaskar Veligeti",
+      "email": "bhaskarv20@gmail.com"
+    }
+  ],
+  "scripts": {
+    "webpack-watch": "webpack --mode development --watch",
+    "start": "nodemon -e src/styles/ -x \"npm run sass\" --exec 'npm run webpack-watch'",
+    "build": "npm run prebuild && npm run sass && webpack --mode production",
+    "dev-server": "webpack-dev-server --hot --inline  --open --mode development",
+    "build:tests": "rimraf test-dist/ && babel test/ --out-dir test-dist/",
+    "test-mocha": "node node_modules/mocha/bin/mocha --compilers js:babel-core/register --reporter spec test-dist/*",
+    "test-jest": "jest",
+    "clean": "rimraf dist/ && rimraf test-dist/",
+    "sass:dist-min": "node-sass  --output-style=compressed --importer=node_modules/node-sass-tilde-importer src/styles/styles.scss > dist/css/ucm.min.css",
+    "sass:dist": "node-sass  --importer=node_modules/node-sass-tilde-importer src/styles/styles.scss > dist/css/ucm.css",
+    "sass": "npm run sass:dist-min && npm run sass:dist",
+    "prebuild": "mkdirp ./dist && mkdirp ./dist/css"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BhaskarVeligeti/UserControlManagerUsage.git"
+  },
+  "keywords": [
+    "React",
+    "Forms",
+    "Dynamic"
+  ],
+  "files": [
+    "dist/**"
+  ],
+  "devDependencies": {
+    "babel-cli": "6.16.0",
+    "babel-core": "^6.18.0",
+    "babel-eslint": "7.0.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-replace-object-assign": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "chai": "3.5.0",
+    "eslint": "3.6.1",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-plugin-import": "1.16.0",
+    "eslint-plugin-jsx-a11y": "2.2.2",
+    "eslint-plugin-react": "6.3.0",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-eslint": "3.0.1",
+    "gulp-mocha": "3.0.1",
+    "gulp-rimraf": "0.2.0",
+    "lodash.assign": "^4.2.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "3.2.0",
+    "node-sass": "^4.9.0",
+    "node-sass-tilde-importer": "^1.0.2",
+    "nodemon": "^1.17.4",
+    "rimraf": "2.5.4",
+    "run-sequence": "1.2.2",
+    "webpack-cli": "^2.1.3"
+  },
+  "engine": "node >= 0.10.x",
+  "author": "Suresh Pillay",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/spillay/FormManager/issues"
+  },
+  "homepage": "https://github.com/spillay/FormManager#readme",
   "dependencies": {
+    "aphrodite": "^2.2.0",
     "bootstrap": "^4.0.0",
-    "bootstrap-select": "^1.13.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
+    "jest": "^22.4.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
+    "moment": "^2.18.1",
+    "popper.js": "^1.12.3",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-helmet": "^5.2.0",
+    "react-test-renderer": "^16.3.2",
+    "react-with-direction": "^1.3.0",
+    "react-with-styles": "^3.2.0",
+    "react-with-styles-interface-aphrodite": "^5.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "tether": "^1.4.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^4.6.0",
+    "webpack-dev-server": "^3.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "peerDependencies": {
+    "bootstrap": "^4.0.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.1",
+    "node-sass": "^4.7.2",
+    "popper.js": "^1.12.3",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-bootstrap-slider": "^2.1.5",
+    "react-dates": "^16.6.1",
+    "react-dom": "^16.3.2",
+    "react-with-styles": "^3.2.0",
+    "react-with-styles-interface-aphrodite": "^5.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "tether": "^1.4.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^4.6.0"
   }
 }
