--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-user-control-manager",
   "version": "1.0.0",
   "description": "Generate Forms based on a JSON Spec",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "contributors": [
     {
       "name": "Suresh Pillay",
@@ -17,7 +17,7 @@
     "webpack-watch": "webpack --mode development --watch",
     "start": "nodemon -e src/styles/ -x \"npm run sass\" --exec 'npm run webpack-watch'",
     "build": "npm run prebuild && npm run sass && webpack --mode production",
-    "dev-server": "webpack-dev-server --hot --inline  --open --mode development",
+    "dev-server": "webpack-dev-server --hot --inline  --mode development",
     "build:tests": "rimraf test-dist/ && babel test/ --out-dir test-dist/",
     "test-mocha": "node node_modules/mocha/bin/mocha --compilers js:babel-core/register --reporter spec test-dist/*",
     "test-jest": "jest",
@@ -86,14 +86,18 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
     "jest": "^22.4.3",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "moment": "^2.18.1",
     "popper.js": "^1.12.3",
     "prop-types": "^15.6.1",
+    "raw-loader": "^0.5.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.3.2",
     "react-with-direction": "^1.3.0",
     "react-with-styles": "^3.2.0",
@@ -116,8 +120,6 @@
     "popper.js": "^1.12.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-bootstrap-slider": "^2.1.5",
-    "react-dates": "^16.6.1",
     "react-dom": "^16.3.2",
     "react-with-styles": "^3.2.0",
     "react-with-styles-interface-aphrodite": "^5.0.0",
