--- a/package.json
+++ b/package.json
@@ -90,8 +90,11 @@
     "prop-types": "^15.6.1",
     "raw-loader": "^0.5.1",
     "react": "^16.3.2",
+    "react-block-ui": "^1.1.1",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
+    "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.3.2",
     "react-with-direction": "^1.3.0",
