barchart and line chart

--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-replace-object-assign": "^1.0.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
@@ -83,6 +84,7 @@
   "dependencies": {
     "aphrodite": "^2.2.0",
     "css-loader": "^0.28.7",
+    "d3": "^5.4.0",
     "file-loader": "^1.1.5",
     "history": "^4.7.2",
     "jest": "^22.4.3",
